--- a/Homework-01/index.html
+++ b/Homework-01/index.html
@@ -9,6 +9,6 @@
 </head>
 <body>
  <h1>Hello World</h1>
-    <script src="Home-work-01.js"></script>
+    <script src="Homework-01.js"></script>
 </body>
 </html>
