--- a/Homework-06/Homework-06.html
+++ b/Homework-06/Homework-06.html
@@ -9,6 +9,10 @@
 </head>
 <body>
  <h1>Homework 06</h1>
+ <p>Ви можете перевірити функції самостійно</p>
+ <p>console.log("Предмети стеднта №0", getSubjects(students[0]));</p>
+ <p>console.log(`Середня оцінка стеднта №0`, getAverageMark(students[0]));</p>
+ <p>console.log(calculateWordLetters(`text`);</p>
     <script src="Homework-06.js"></script>
 </body>
 </html>
